--- a/MFPE_CustomerApi/MFPE_CustomerApi.csproj
+++ b/MFPE_CustomerApi/MFPE_CustomerApi.csproj
@@ -19,5 +19,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Authenticate.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
